--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,21 +1,13 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "../../dist/server",
-    "rootDir": ".",
-    "allowJs": true,
-    "resolveJsonModule": true,
-    "lib": ["ES2020"],
-    "types": ["node"],
-    "baseUrl": ".",
-    "paths": {
-      "*": ["../../node_modules/*"]
-    }
+    "forceConsistentCasingInFileNames": true,
+    "outDir": "../../dist/server"
   },
   "include": ["./**/*"],
   "exclude": ["node_modules"]
