fix: add testing configuration and fix TypeScript setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": ["jest", "@testing-library/jest-dom", "node"]
   },
-  "include": ["src"],
+  "include": ["src", "__mocks__", "jest.config.js"],
   "exclude": ["node_modules", "dist"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
