--- a/package.json
+++ b/package.json
@@ -19,11 +19,6 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^22.10.5",
-    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -34,22 +29,30 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^7.1.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "web-vitals": "^3.0.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
-    "@types/jest": "^29.5.14",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.0.0",
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^22.10.5",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/testing-library__react": "^10.2.0",
+    "@types/web-vitals": "^2.0.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.2.5",
     "tsx": "^4.19.2",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8",
-    "web-vitals": "^4.2.4"
+    "vite": "^5.0.8"
   }
 }
